Fix alignment and remove reverse trick from contact mail

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -493,11 +493,6 @@ fieldset[disabled] .btn-success.active {
   opacity: 0;
   display: none;
 }
-span.reverse {
-  unicode-bidi: bidi-override;
-  direction: rtl;
-}
-
 .col-lg-4 col-lg-offset-2 {
   text-align: center;
 }
@@ -516,7 +511,7 @@ span.reverse {
 
 @media (min-width: 1200px) {
   .col-lg-8 {
-      width: 73.666667%; 
+      width: 73.666667%;
   }
 }
 
